; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_spawn.c_G_SpawnFloat.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_spawn.c_G_SpawnFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @G_SpawnFloat(i8* %0, i8* %1, float* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca float*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store float* %2, float** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @G_SpawnString(i8* %9, i8* %10, i8** %7)
  store i32 %11, i32* %8, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = call float @atof(i8* %12)
  %14 = load float*, float** %6, align 8
  store float %13, float* %14, align 4
  %15 = load i32, i32* %8, align 4
  ret i32 %15
}

declare dso_local i32 @G_SpawnString(i8*, i8*, i8**) #1

declare dso_local float @atof(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
